lib/linq/peg/parser/javascript-parser.js
"use strict";
/* eslint-disable */
// @ts-nocheck 
Object.defineProperty(exports, "__esModule", { value: true });
let parser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */ (function () {
    "use strict";
    function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
    }
    function peg$SyntaxError(message, expected, found, location) {
        this.message = message;
        this.expected = expected;
        this.found = found;
        this.location = location;
        this.name = "SyntaxError";
        if (typeof Error.captureStackTrace === "function") {
            Error.captureStackTrace(this, peg$SyntaxError);
        }
    }
    peg$subclass(peg$SyntaxError, Error);
    let buildMessage = function (expected, found) {
        var DESCRIBE_EXPECTATION_FNS = {
            literal: function (expectation) {
                return "\"" + literalEscape(expectation.text) + "\"";
            },
            "class": function (expectation) {
                var escapedParts = "", i;
                for (i = 0; i < expectation.parts.length; i++) {
                    escapedParts += expectation.parts[i] instanceof Array
                        ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                        : classEscape(expectation.parts[i]);
                }
                return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
            },
            any: function (expectation) {
                return "any character";
            },
            end: function (expectation) {
                return "end of input";
            },
            other: function (expectation) {
                return expectation.description;
            }
        };
        function hex(ch) {
            return ch.charCodeAt(0).toString(16).toUpperCase();
        }
        function literalEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/"/g, '\\"')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g, function (ch) { return '\\x0' + hex(ch); })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) { return '\\x' + hex(ch); });
        }
        function classEscape(s) {
            return s
                .replace(/\\/g, '\\\\')
                .replace(/\]/g, '\\]')
                .replace(/\^/g, '\\^')
                .replace(/-/g, '\\-')
                .replace(/\0/g, '\\0')
                .replace(/\t/g, '\\t')
                .replace(/\n/g, '\\n')
                .replace(/\r/g, '\\r')
                .replace(/[\x00-\x0F]/g, function (ch) { return '\\x0' + hex(ch); })
                .replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) { return '\\x' + hex(ch); });
        }
        function describeExpectation(expectation) {
            return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
        }
        function describeExpected(expected) {
            var descriptions = new Array(expected.length), i, j;
            for (i = 0; i < expected.length; i++) {
                descriptions[i] = describeExpectation(expected[i]);
            }
            descriptions.sort();
            if (descriptions.length > 0) {
                for (i = 1, j = 1; i < descriptions.length; i++) {
                    if (descriptions[i - 1] !== descriptions[i]) {
                        descriptions[j] = descriptions[i];
                        j++;
                    }
                }
                descriptions.length = j;
            }
            switch (descriptions.length) {
                case 1:
                    return descriptions[0];
                case 2:
                    return descriptions[0] + " or " + descriptions[1];
                default:
                    return descriptions.slice(0, -1).join(", ")
                        + ", or "
                        + descriptions[descriptions.length - 1];
            }
        }
        function describeFound(found) {
            return found ? "\"" + literalEscape(found) + "\"" : "end of input";
        }
        return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
    };
    function peg$parse(input, options) {
        options = options !== void 0 ? options : {};
        var peg$FAILED = {}, peg$startRuleFunctions = { Start: peg$parseStart }, peg$startRuleFunction = peg$parseStart, peg$c0 = function (test, left, right) {
            return {
                type: 'ConditionalExpression',
                test: test,
                left: left,
                right: right
            };
        }, peg$c1 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'LogicalExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c2 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'LogicalExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c3 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'BitwiseExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c4 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'RelationalExpression',
                    operator: element[0][0],
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c5 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'RelationalExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c6 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'ShiftExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c7 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'BinaryExpression',
                    operator: element[0][0].toLowerCase(),
                    left: result,
                    right: element[1]
                };
            });
        }, peg$c8 = function (operator, operand) {
            return operand.type === 'NumberLiteral' && (operator === '-' || operator === '+')
                ?
                    {
                        type: 'NumberLiteral',
                        value: (operator === '-' ? operator : '') + operand.value
                    }
                :
                    (operator === '-' || operator === '+') && operand.type === 'PostfixExpression' && operand.argument.type === 'NumberLiteral'
                        ?
                            Object.assign(operand, { argument: {
                                    type: 'NumberLiteral',
                                    value: (operator === '-' ? operator : '') + operand.argument.value
                                } })
                        :
                            {
                                type: 'UnaryExpression',
                                operator: operator,
                                argument: operand
                            };
        }, peg$c9 = function (operand, operator) {
            return operator
                ?
                    {
                        type: 'PostfixExpression',
                        operator: operator,
                        argument: operand
                    }
                :
                    operand;
        }, peg$c10 = function (expr) { return expr; }, peg$c11 = function (qual, expr) {
            return {
                type: 'ArrayExpression',
                object: qual,
                index: expr
            };
        }, peg$c12 = function (qual, args) {
            return {
                type: 'CallExpression',
                object: qual,
                arguments: args
            };
        }, peg$c13 = function (first, rest) {
            return buildTree(first, rest, function (result, element) {
                return {
                    type: 'MemberExpression',
                    object: result,
                    property: element[1]
                };
            });
        }, peg$c14 = function (op) { return op[0].toLowerCase(); }, peg$c15 = function (first, rest) { return buildList(first, rest, 1); }, peg$c16 = function (args) { return args || []; }, peg$c17 = function (exp) { return exp; }, peg$c18 = /^[ \t\r\n\f]/, peg$c19 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false), peg$c20 = function (first, last) { return { type: 'Identifier', name: first + last.join('') }; }, peg$c21 = /^[a-z]/, peg$c22 = peg$classExpectation([["a", "z"]], false, false), peg$c23 = /^[A-Z]/, peg$c24 = peg$classExpectation([["A", "Z"]], false, false), peg$c25 = /^[_$]/, peg$c26 = peg$classExpectation(["_", "$"], false, false), peg$c27 = /^[0-9]/, peg$c28 = peg$classExpectation([["0", "9"]], false, false), peg$c29 = "`", peg$c30 = peg$literalExpectation("`", false), peg$c31 = "\\$", peg$c32 = peg$literalExpectation("\\$", false), peg$c33 = /^[{]/, peg$c34 = peg$classExpectation(["{"], false, false), peg$c35 = peg$anyExpectation(), peg$c36 = "$", peg$c37 = peg$literalExpectation("$", false), peg$c38 = "\\${", peg$c39 = peg$literalExpectation("\\${", false), peg$c40 = "$\\{", peg$c41 = peg$literalExpectation("$\\{", false), peg$c42 = "\\$\\{", peg$c43 = peg$literalExpectation("\\$\\{", false), peg$c44 = /^[$`\\]/, peg$c45 = peg$classExpectation(["$", "`", "\\"], false, false), peg$c46 = function (capture) {
            return {
                type: 'TemplateLiteral',
                values: capture.reduce((r, v) => {
                    if (Array.isArray(v)) {
                        if (typeof (r[r.length - 1]) != 'string')
                            r.push('');
                        r[r.length - 1] += v[0] == undefined ? v[1] : v[0] + (v[1] == undefined ? v[2] : v[1]);
                    }
                    else {
                        r.push(v);
                    }
                    return r;
                }, []).map(v => {
                    if (typeof v == 'string') {
                        return { type: 'Literal', value: v };
                    }
                    return v;
                })
            };
        }, peg$c47 = function (expression) {
            return {
                type: 'TemplateExpression',
                value: expression
            };
        }, peg$c48 = "true", peg$c49 = peg$literalExpectation("true", false), peg$c50 = function () { return { type: 'BooleanLiteral', value: true }; }, peg$c51 = "false", peg$c52 = peg$literalExpectation("false", false), peg$c53 = function () { return { type: 'BooleanLiteral', value: false }; }, peg$c54 = "null", peg$c55 = peg$literalExpectation("null", false), peg$c56 = function () { return { type: 'NullLiteral' }; }, peg$c57 = function (literal) { return literal; }, peg$c58 = function (first, rest) { return buildList(first, rest, 2); }, peg$c59 = function (properties) { return { type: 'ObjectLiteral', properties: properties }; }, peg$c60 = ":", peg$c61 = peg$literalExpectation(":", false), peg$c62 = function (key, value) { return { type: 'Property', key: key, value: value }; }, peg$c63 = function (elements) { return { type: 'ArrayLiteral', elements: elements }; }, peg$c64 = /^[lL]/, peg$c65 = peg$classExpectation(["l", "L"], false, false), peg$c66 = function () { return { type: 'NumberLiteral', value: text() }; }, peg$c67 = "0", peg$c68 = peg$literalExpectation("0", false), peg$c69 = /^[1-9]/, peg$c70 = peg$classExpectation([["1", "9"]], false, false), peg$c71 = /^[_]/, peg$c72 = peg$classExpectation(["_"], false, false), peg$c73 = "0x", peg$c74 = peg$literalExpectation("0x", false), peg$c75 = "0X", peg$c76 = peg$literalExpectation("0X", false), peg$c77 = "0b", peg$c78 = peg$literalExpectation("0b", false), peg$c79 = "0B", peg$c80 = peg$literalExpectation("0B", false), peg$c81 = /^[01]/, peg$c82 = peg$classExpectation(["0", "1"], false, false), peg$c83 = /^[0-7]/, peg$c84 = peg$classExpectation([["0", "7"]], false, false), peg$c85 = ".", peg$c86 = peg$literalExpectation(".", false), peg$c87 = /^[fFdD]/, peg$c88 = peg$classExpectation(["f", "F", "d", "D"], false, false), peg$c89 = /^[eE]/, peg$c90 = peg$classExpectation(["e", "E"], false, false), peg$c91 = /^[+\-]/, peg$c92 = peg$classExpectation(["+", "-"], false, false), peg$c93 = /^[pP]/, peg$c94 = peg$classExpectation(["p", "P"], false, false), peg$c95 = /^[a-f]/, peg$c96 = peg$classExpectation([["a", "f"]], false, false), peg$c97 = /^[A-F]/, peg$c98 = peg$classExpectation([["A", "F"]], false, false), peg$c99 = "'", peg$c100 = peg$literalExpectation("'", false), peg$c101 = /^['\\\n\r]/, peg$c102 = peg$classExpectation(["'", "\\", "\n", "\r"], false, false), peg$c103 = function (chars) { return { type: 'Literal', value: chars.map(l => l[0] == undefined ? l[1] : l[0] + l[1]).join('') }; }, peg$c104 = "\"", peg$c105 = peg$literalExpectation("\"", false), peg$c106 = /^["\\\n\r]/, peg$c107 = peg$classExpectation(["\"", "\\", "\n", "\r"], false, false), peg$c108 = "\\", peg$c109 = peg$literalExpectation("\\", false), peg$c110 = /^[btnfr"'`\\]/, peg$c111 = peg$classExpectation(["b", "t", "n", "f", "r", "\"", "'", "`", "\\"], false, false), peg$c112 = /^[0-3]/, peg$c113 = peg$classExpectation([["0", "3"]], false, false), peg$c114 = "u", peg$c115 = peg$literalExpectation("u", false), peg$c116 = "+", peg$c117 = peg$literalExpectation("+", true), peg$c118 = "&", peg$c119 = peg$literalExpectation("&", true), peg$c120 = "&&", peg$c121 = peg$literalExpectation("&&", true), peg$c122 = ",", peg$c123 = peg$literalExpectation(",", false), peg$c124 = "/", peg$c125 = peg$literalExpectation("/", true), peg$c126 = "==", peg$c127 = peg$literalExpectation("==", true), peg$c128 = "===", peg$c129 = peg$literalExpectation("===", true), peg$c130 = ">=", peg$c131 = peg$literalExpectation(">=", true), peg$c132 = ">", peg$c133 = peg$literalExpectation(">", true), peg$c134 = "-", peg$c135 = peg$literalExpectation("-", false), peg$c136 = "[", peg$c137 = peg$literalExpectation("[", false), peg$c138 = "{", peg$c139 = peg$literalExpectation("{", false), peg$c140 = "<=", peg$c141 = peg$literalExpectation("<=", true), peg$c142 = "(", peg$c143 = peg$literalExpectation("(", false), peg$c144 = "<", peg$c145 = peg$literalExpectation("<", true), peg$c146 = "<<", peg$c147 = peg$literalExpectation("<<", true), peg$c148 = ">>", peg$c149 = peg$literalExpectation(">>", true), peg$c150 = ">>>", peg$c151 = peg$literalExpectation(">>>", true), peg$c152 = "%", peg$c153 = peg$literalExpectation("%", true), peg$c154 = "!=", peg$c155 = peg$literalExpectation("!=", true), peg$c156 = "!==", peg$c157 = peg$literalExpectation("!==", true), peg$c158 = "!", peg$c159 = peg$literalExpectation("!", true), peg$c160 = "~", peg$c161 = peg$literalExpectation("~", true), peg$c162 = "|", peg$c163 = peg$literalExpectation("|", true), peg$c164 = "||", peg$c165 = peg$literalExpectation("||", true), peg$c166 = "^", peg$c167 = peg$literalExpectation("^", true), peg$c168 = peg$literalExpectation("+", false), peg$c169 = "++", peg$c170 = peg$literalExpectation("++", false), peg$c171 = "--", peg$c172 = peg$literalExpectation("--", false), peg$c173 = "]", peg$c174 = peg$literalExpectation("]", false), peg$c175 = "}", peg$c176 = peg$literalExpectation("}", false), peg$c177 = ")", peg$c178 = peg$literalExpectation(")", false), peg$c179 = peg$literalExpectation("-", true), peg$c180 = "*", peg$c181 = peg$literalExpectation("*", true), peg$c182 = "?", peg$c183 = peg$literalExpectation("?", true), peg$currPos = 0, peg$savedPos = 0, peg$posDetailsCache = [{ line: 1, column: 1 }], peg$maxFailPos = 0, peg$maxFailExpected = [], peg$silentFails = 0, peg$resultsCache = {}, peg$result;
        if ("startRule" in options) {
            if (!(options.startRule in peg$startRuleFunctions)) {
                throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
            }
            peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }
        function text() {
            return input.substring(peg$savedPos, peg$currPos);
        }
        function location() {
            return peg$computeLocation(peg$savedPos, peg$currPos);
        }
        function expected(description, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);
            throw peg$buildStructuredError([peg$otherExpectation(description)], input.substring(peg$savedPos, peg$currPos), location);
        }
        function error(message, location) {
            location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos);
            throw peg$buildSimpleError(message, location);
        }
        function peg$literalExpectation(text, ignoreCase) {
            return { type: "literal", text: text, ignoreCase: ignoreCase };
        }
        function peg$classExpectation(parts, inverted, ignoreCase) {
            return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
        }
        function peg$anyExpectation() {
            return { type: "any" };
        }
        function peg$endExpectation() {
            return { type: "end" };
        }
        function peg$otherExpectation(description) {
            return { type: "other", description: description };
        }
        function peg$computePosDetails(pos) {
            var details = peg$posDetailsCache[pos], p;
            if (details) {
                return details;
            }
            else {
                p = pos - 1;
                while (!peg$posDetailsCache[p]) {
                    p--;
                }
                details = peg$posDetailsCache[p];
                details = {
                    line: details.line,
                    column: details.column
                };
                while (p < pos) {
                    if (input.charCodeAt(p) === 10) {
                        details.line++;
                        details.column = 1;
                    }
                    else {
                        details.column++;
                    }
                    p++;
                }
                peg$posDetailsCache[pos] = details;
                return details;
            }
        }
        function peg$computeLocation(startPos, endPos) {
            var startPosDetails = peg$computePosDetails(startPos), endPosDetails = peg$computePosDetails(endPos);
            return {
                start: {
                    offset: startPos,
                    line: startPosDetails.line,
                    column: startPosDetails.column
                },
                end: {
                    offset: endPos,
                    line: endPosDetails.line,
                    column: endPosDetails.column
                }
            };
        }
        function peg$fail(expected) {
            if (peg$currPos < peg$maxFailPos) {
                return;
            }
            if (peg$currPos > peg$maxFailPos) {
                peg$maxFailPos = peg$currPos;
                peg$maxFailExpected = [];
            }
            peg$maxFailExpected.push(expected);
        }
        function peg$buildSimpleError(message, location) {
            return new peg$SyntaxError(message, null, null, location);
        }
        function peg$buildStructuredError(expected, found, location) {
            return new peg$SyntaxError(buildMessage(expected, found), expected, found, location);
        }
        function peg$parseStart() {
            var s0;
            var key = peg$currPos * 88 + 0, cached = peg$resultsCache[key];
            if (cached) {
                peg$currPos = cached.nextPos;
                return cached.result;
            }
            s0 = peg$parseConditionalExpression();
            peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };
            return s0;
        }
        function peg$parseConditionalExpression() {
            var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
            var key = peg$currPos * 88 + 1, cached = peg$resultsCache[key];
            if (cached) {
                peg$currPos = cached.nextPos;
                return cached.result;
            }
            s0 = peg$currPos;
            s1 = peg$parseLogicalOrExpression();
            if (s1 !== peg$FAILED) {
                s2 = peg$parse__();
                if (s2 !== peg$FAILED) {
                    s3 = peg$parseQMARK();
                    if (s3 !== peg$FAILED) {
                        s4 = peg$parse__();
                        if (s4 !== peg$FAILED) {
                            s5 = peg$parseConditionalExpression();
                            if (s5 !== peg$FAILED) {
                                s6 = peg$parse__();
                                if (s6 !== peg$FAILED) {
                                    s7 = peg$parseCOLON();
                                    if (s7 !== peg$FAILED) {
                                        s8 = peg$parse__();
                                        if (s8 !== peg$FAILED) {
                                            s9 = peg$parseConditionalExpression();
                                            if (s9 !== peg$FAILED) {
                                                peg$savedPos = s0;
                                                s1 = peg$c0(s1, s5, s9);
                                                s0 = s1;
                                            }
                                            else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        }
                                        else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    }
                                    else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                }
                                else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            }
                            else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        }
                        else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    }
                    else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                }
                else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
            }
            else {
                peg$currPos = s0;
                s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
                s0 = peg$parseLogicalOrExpression();
            }
            peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };
            return s0;
        }
        function peg$parseLogicalOrExpression() {
            var s0, s1, s2, s3, s4, s5, s6;
            var key = peg$currPos * 88 + 2, cached = peg$resultsCache[key];
            if (cached) {
                peg$currPos = cached.nextPos;
                return cached.result;
            }
            s0 = peg$currPos;
            s1 = peg$parseLogicalAndExpression();
            if (s1 !== peg$FAILED) {
                s2 = [];
                s3 = peg$currPos;
                s4 = peg$currPos;
                s5 = peg$parseOROR();
                if (s5 !== peg$FAILED) {
                    s6 = peg$parse__();
                    if (s6 !== peg$FAILED) {
                        s5 = [s5, s6];
                        s4 = s5;
                    }
                    else {
                        peg$currPos = s4;
                        s4 = peg$FAILED;
                    }
                }
                else {
                    peg$currPos = s4;
                    s4 = peg$FAILED;
                }
                if (s4 !== peg$FAILED) {
